[package]
name = "bevy_headless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bevy = { version = "0.12.1", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "multi-threaded"
] }
bytemuck = "1.14.1"
futures = "0.3.30"
futures-lite = "2.2.0"
image = { version="0.24.8", default-features=false, features=["png"]}
log = "0.4.20"
parking_lot = "0.12.1"
wgpu = "0.17.2"

[dev-dependencies]
pretty_env_logger = "0.5.0"
image = { version = "*", features = ["png"] }
